# cookbook

./: .gitignore  README.md  README_zh.md
examples/audio-car-cockpit/: README.md  README_zh.md
examples/audio-transcription-cli/: Makefile  README.md  README_zh.md  download_audio_samples.py  examples.sh  pyproject.toml
examples/audio-transcription-cli/src/audio_transcription_cli/: __init__.py  audio_playback.py  audio_preprocessing.py  config.py  model_downloader.py  model_wrapper.py  platform_utils.py  raw_transcript_logger.py  text_cleaner.py  transcribe.py
examples/browser-control/: README.md  README_zh.md  pyproject.toml
examples/browser-control/src/browser_control/: main.py
examples/car-maker-identification/: README.md  README_zh.md
examples/flight-search-assistant/: .envrc  Makefile  README.md  README_zh.md  flight_search.py  model.py  postprocessing.py  pyproject.toml  tools.py
examples/invoice-parser/: README.md  README_zh.md
examples/leap-slogan-example-ios/: README.md  README_zh.md
examples/lfm2-english-to-korean/: README.md  README_zh.md  linkedin_post.txt  main.py  pyproject.toml
examples/lfm2-extract/: README.md  example-raw-generation.py  example-structured-generation.py  pyproject.toml
examples/lfm2-extract/src/lfm2_extract/: __init__.py
examples/lfm2-thinking-demo/: .env.local.example  README.md  flight_search.py  pyproject.toml  tools.py
examples/meeting-summarization/: README.md  README_zh.md  pyproject.toml  summarize.py
examples/meeting-summarization/transcripts/: example_1.txt  example_2.txt  example_3.txt
examples/news-reader/: Makefile  README.md  examples.sh  pyproject.toml
examples/news-reader/lfm2-audio-macos-arm64/: libggml-base.dylib  libggml.dylib  libllama.dylib  libmtmd.dylib  llama-lfm2-audio  llama-mtmd-cli
examples/news-reader/src/news_reader/: __init__.py  audio_example.py  audio_file_manager.py  audio_player.py  audio_preprocessor.py  audio_recorder.py  chat_example.py  modal_infra.py  server.py
examples/tool-use/: tool_call_with_transformers.py
examples/vl-webgpu-demo/: README.md  README_zh.md
examples/voice-chat/: Makefile  README.md  README_zh.md
examples/voice-chat/src/voice_chat/: audio_recorder.py  client.py
finetuning/: README.md  README_zh.md
