[project]
name = "lfm2-extract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paulescu", email = "plabartabajo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "llama-cpp-python>=0.3.16",
    "outlines>=1.2.9",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
